k8s/services/payment-service/dev/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-consumer-dev
  labels:
    app: payment-consumer-dev
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-consumer-dev
  template:
    metadata:
      labels:
        app: payment-consumer-dev
        environment: dev
    spec:
      containers:
        - name: payment-consumer
          image: payment-service:latest
          imagePullPolicy: IfNotPresent
          command: ["php", "artisan", "rabbitmq:consume"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
