k8s/services/payment-service/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service-dev
  labels:
    app: payment-service-dev
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: payment-service-dev
  ports:
    - name: http
      port: 8080
      targetPort: http
