k8s/services/payment-service/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service-dev
  labels:
    app: payment-service-dev
    environment: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: dev.devops.local
      http:
        paths:
          - path: /api/payments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service-dev
                port:
                  number: 8080
